1. remove default page. 2. add <nav> 3. add grid with null default values 4. add sprites

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,12 +87,14 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+  background:rgba(33, 57, 130, 0.3);
+  /* background: #33226b; */
 }
 
 a {
