--- a/src/components/Grid/Grid.module.css
+++ b/src/components/Grid/Grid.module.css
@@ -17,3 +17,13 @@
   border: 1px solid #ccc;
   background-color: #8d8383;
 }
+
+.start-game-btn {
+  background-color: #a94343;
+  margin: 5%; 
+  padding: 10px 25px;
+  border: 1px solid #111;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.3em;
+}
